--- a/notebooks/TeoriaComputacion_6.ipynb
+++ b/notebooks/TeoriaComputacion_6.ipynb
@@ -997,6 +997,571 @@
     "- Si también $B \\to \\epsilon$, entonces habría que añadir\n",
     "$$D \\to aBc,  \\hspace{1 cm}  D \\to aAc,  \\hspace{1 cm}  D \\to ac$$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Variables Anulables\n",
+    "\n",
+    "- Si tenemos $C \\to AB$,   $A \\to \\epsilon$,   $B \\to \\epsilon$, habría que añadir, al quitar las producciones nulas:\n",
+    "$$C \\to A, \\hspace{1 cm}  C \\to B, \\hspace{1 cm}  C \\to \\epsilon$$\n",
+    "- Y después habría que eliminar $C \\to \\epsilon$\n",
+    "- Nosotros vamos a calcular desde el principio todas las variables, $E$, tales que en algún momento aparece $E \\to \\epsilon$. Estas variables se dicen anulables. Son variables tales que $E \\Rightarrow^* ζ$\n",
+    "- Después vamos a eliminar todas las producciones nulas y a añadir las producciones que compensen esta eliminación."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Algoritmo (1)\n",
+    "\n",
+    "- $H$ es el conjunto de las variables anulables\n",
+    "- Cálculo de Variables Anulables:\n",
+    "\n",
+    "    1. $H = ∅$\n",
+    "    2. Para cada produccion $A \\to \\epsilon$, se hace $H = H \\cup \\{A\\}$\n",
+    "    3. Mientras $H$ cambie\n",
+    "        1. Para cada produccion $B \\to A_1A_2 \\cdots A_n$,  \n",
+    "        donde $A_i \\in H$ para todo $i = 1, \\cdots, n$, se hace $H =   H \\cup \\{B\\}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Algoritmo (2)\n",
+    "\n",
+    "- Eliminar y Añadir:\n",
+    "\n",
+    "    1. Se eliminan todas las producciones nulas de la gramática\n",
+    "    2. Para cada produccion de la gramática de la forma $A \\to \\alpha_1, \\cdots \\alpha_n$,  donde $\\alpha_i \\in V \\cup T$.\n",
+    "        1. Se añaden todas las producciones de la forma  \n",
+    "        $A \\to \\beta_1, \\cdots \\beta_n$, donde $\\beta_i = \\alpha_i$ si $\\alpha_i \\in H$ y $(\\beta_i = \\alpha_i) \\lor (\\beta_i = \\epsilon)$  si $\\alpha \\in H$  \n",
+    "        y no todos los $\\beta_i$ puedan ser nulos al mismo tiempo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Palabra Vacía\n",
+    "\n",
+    "- Si $G$ generaba inicialmente la palabra nula, entonces la nueva gramática no la genera.\n",
+    "- Se puede saber si se pierde la palabra vacía comprobando si $S \\in H$.\n",
+    "- Si tenemos una gramática $G$, podemos construir una gramática $G_v$ con una sola producción nula y que genera el mismo lenguaje que $G$ más la palabra vacía. Para ello se añade una nueva variable, $S_v$, que pasa a ser el símbolo inicial de la nueva gramática, $G_v$. También se añaden dos producciones:\n",
+    "\n",
+    "$$S_v \\to S, \\hspace{1 cm} S_v \\to \\epsilon$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Ejemplo\n",
+    "\n",
+    "- Eliminar las producciones nulas de la siguiente gramática:\n",
+    "\n",
+    "![](../figuras/producciones_nulas_1.png)\n",
+    "\n",
+    "- Cálculo de $H = \\{\\}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "\n",
+    "![](../figuras/producciones_nulas_2.png)\n",
+    "\n",
+    "- Cálculo de $H = \\{A, B\\}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "\n",
+    "![](../figuras/producciones_nulas_3.png)\n",
+    "\n",
+    "- Cálculo de $H = \\{A, B, C\\}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "![](../figuras/producciones_nulas_4.png)\n",
+    "\n",
+    "- Cálculo de $H = \\{A, B, C, S\\}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "![](../figuras/producciones_nulas_5.png)\n",
+    "\n",
+    "- Cálculo de $H = \\{A, B, C, S\\}$\n",
+    "- Al ser $S$ anulable la palabra vacía puede generarse mediante esta gramática."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Ejemplo: Segunda Parte\n",
+    "\n",
+    "![](../figuras/producciones_nulas_6.png)\n",
+    "\n",
+    "$$H = \\{A, B, C, S\\}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "![](../figuras/producciones_nulas_7.png)\n",
+    "\n",
+    "$$H = \\{A, B, C, S\\}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "![](../figuras/producciones_nulas_8.png)\n",
+    "\n",
+    "$$H = \\{A, B, C, S\\}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "![](../figuras/producciones_nulas_9.png)\n",
+    "\n",
+    "$$H = \\{A, B, C, S\\}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "![](../figuras/producciones_nulas_10.png)\n",
+    "\n",
+    "$$H = \\{A, B, C, S\\}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "![](../figuras/producciones_nulas_11.png)\n",
+    "\n",
+    "$$H = \\{A, B, C, S\\}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "![](../figuras/producciones_nulas_12.png)\n",
+    "\n",
+    "$$H = \\{A, B, C, S\\}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "![](../figuras/producciones_nulas_13.png)\n",
+    "\n",
+    "$$H = \\{A, B, C, S\\}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Producciones Unitarias\n",
+    "\n",
+    "$$A \\to B, \\hspace{1 cm}   A, B \\in V$$\n",
+    "- Si queremos eliminar $A \\to B$, perdemos la posibilidad de\n",
+    "$$A \\Rightarrow B \\Rightarrow \\alpha$$\n",
+    "- Para eliminar  $A \\to B$, añadimos todas las producciones $A \\to \\alpha$ donde $B \\to \\alpha$ es una producción\n",
+    "- Si tenemos $B \\to C$ introduciríamos una unitaria que habría que eliminar después. Para poder eliminar todas de una vez calculamos, $H:$ conjunto de parejas $(A, B)$ tales que $B$ derivable a partir de $A$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Algoritmo\n",
+    "\n",
+    "1. $H = ∅$\n",
+    "2. Para toda producción de la forma $A \\to B$, la pareja $(A, B)$ se introduce en $H$.\n",
+    "3. Mientras $H$ cambie\n",
+    "    1. Para cada dos parejas $(A, B), (B, C) \\in H$\n",
+    "        1. Si la pareja $(A, C) \\notin H$  \n",
+    "        $(A, C)$ se introduce en $H$\n",
+    "4.  Se eliminan las producciones unitarias\n",
+    "5.  Para cada pareja $(B, A) \\in H$\n",
+    "    1. Para cada producción $A \\in \\alpha$\n",
+    "        1. Se añade una producción $B \\in \\alpha$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Ejemplo \n",
+    "\n",
+    "![](../figuras/producciones_unitarias_1.png)\n",
+    "\n",
+    "- Cálculo de $H = \\{\\}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "![](../figuras/producciones_unitarias_2.png)\n",
+    "\n",
+    "- Cálculo de $H = \\{ (S, A), (A, B)\\}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "![](../figuras/producciones_unitarias_1.png)\n",
+    "\n",
+    "- Cálculo de $H = \\{ (S, A), (A, B), (S, B)\\}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "![](../figuras/producciones_unitarias_3.png)\n",
+    "\n",
+    "- Cálculo de $H = \\{ (S, A), (A, B), (S, B)\\}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "![](../figuras/producciones_unitarias_4.png)\n",
+    "\n",
+    "- Cálculo de $H = \\{ (S, A), (A, B), (S, B\\}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "![](../figuras/producciones_unitarias_5.png)\n",
+    "\n",
+    "- Cálculo de $H = \\{ (S, A), (A, B), (S, B)\\}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "![](../figuras/producciones_unitarias_6.png)\n",
+    "\n",
+    "- Cálculo de $H = \\{ (S, A), (A, B), (S, B)\\}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "![](../figuras/producciones_unitarias_7.png)\n",
+    "\n",
+    "- Cálculo de $H = \\{ (S, A), (A, B), (S, B)\\}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "- Esta es la gramática resultante:\n",
+    "    \n",
+    "![](../figuras/producciones_unitarias_8.png)\n",
+    "\n",
+    "- Cálculo de $H = \\{ (S, A), (A, B), (S, B)\\}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "##  El problema de la Pertenencia\n",
+    "\n",
+    "- **Problema**: Dada una gramática independiente del contexto $G$ y una palabra $u$, ¿pertenece $u$ a $L(G)$?\n",
+    "\n",
+    "![](../figuras/profundidad.png)\n",
+    "\n",
+    "- Si la palabra es generada, nos sale en esta búsqueda. Si la palabra no es generada, ¿hasta qué profundidad tenemos que generar para convencernos de que no se puede?\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "- $2n - 1$ (en cada paso o sacamos al menos un nuevo símbolo terminal $(n)$ o aumenta al menos en $1$ la longitud $(n - 1)$)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Forma Normal de Chomsky\n",
+    "\n",
+    "- Todas las producciones tienen la forma\n",
+    "$$A \\to BC, \\hspace{1 cm}   A \\to a,$$  \n",
+    "donde $A, B, C \\in V, a \\in T$.\n",
+    "- El algoritmo se aplica a gramáticas sin producciones nulas ni unitarias\n",
+    "- Hay dos operaciones básicas:\n",
+    "- Eliminar terminales en producciones que no sean $A \\to a$\n",
+    "- Eliminar producciones con una longitud en la parte derecha mayor de $2$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "- **Paso 1**: Eliminar terminales en producciones que no sean $A \\to a$:\n",
+    "\n",
+    "![](../figuras/fnc_1.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "- **Paso 2**: Eliminar producciones con una longitud en la parte derecha mayor de $2$:\n",
+    "\n",
+    "![](../figuras/fnc_2.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Algoritmo\n",
+    "\n",
+    "1. Para cada producción $A \\to \\alpha_1 \\cdots \\alpha_n,\\hspace{0.25 cm} \\alpha_i \\in (V ∪ T), \\hspace{0.25 cm} n \\ge 2$\n",
+    "    1. Para cada $\\alpha_i$, si $\\alpha_i$ es terminal: $\\alpha_i = a \\in T$\n",
+    "        1. Se añade la producción $C_a \\to a$\n",
+    "        2. Se cambia $\\alpha_i$ por $C_a$ en $A \\to \\alpha_1 \\cdots \\alpha_n$\n",
+    "2. Para cada producción de la forma $A \\to B_1 \\cdots B_m, \\hspace{0.25 cm} m \\ge 3$\n",
+    "    1. Se añaden $(m - 2)$ variables $D_1, D_2, \\cdots , D_{m - 2}$  \n",
+    "    (distintas para cada producción)\n",
+    "    2. La producción $A \\to B_1 \\cdots B_m$ se reemplaza por\n",
+    "    $$A \\to B_1D_1,  \\hspace{0.25 cm} D_1 \\to B_2D_2,  \\hspace{0.25 cm} \\cdots, \\hspace{0.25 cm}  D_{m - 2} \\to B_{m - 1}B_m$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Ejemplo\n",
+    "\n",
+    "![](../figuras/fnc_3.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "![](../figuras/fnc_4.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "![](../figuras/fnc_5.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "![](../figuras/fnc_6.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "- Resultado:\n",
+    "\n",
+    "![](../figuras/fnc_7.png)"
+   ]
   }
  ],
  "metadata": {
