--- a/notebooks/TeoriaComputacion_6.ipynb
+++ b/notebooks/TeoriaComputacion_6.ipynb
@@ -260,7 +260,7 @@
    "source": [
     "## Símbolos y Producciones Inútiles\n",
     "\n",
-    "- Un símbolo $X \\in (V \\cup T) se dice útil si y solo si existe una cadena de derivaciones en G tal que\n",
+    "- Un símbolo $X \\in (V \\cup T)$ se dice útil si y solo si existe una cadena de derivaciones en G tal que\n",
     "\n",
     "$$S \\Rightarrow^* αXβ \\Rightarrow^* w \\in T^*$$\n",
     "\n",
@@ -1585,5 +1585,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
