--- a/notebooks/TeoriaComputacion_7.ipynb
+++ b/notebooks/TeoriaComputacion_7.ipynb
@@ -599,12 +599,12 @@
     "- $P$ es\n",
     "$$I \\to a ⎮ b ⎮ Ia ⎮ Ib ⎮ I0 ⎮ I1 \\\\\n",
     "E \\to I ⎮ E * E ⎮ E + E ⎮ (E)$$\n",
-    "- δ es\n",
-    "    - $\\delta(q, ε, I) = \\{(q, a), (q, b), (q, Ia), (q, Ib), (q, I0), (q, I1)\\}$\n",
-    "    - $\\delta(q, ε, E) = \\{(q, I), (q, E * E), (q, E + E), (q, (E))\\}$\n",
-    "    - $\\delta(q, a, a) = \\{(q, ε)\\}; \\hspace{0.5 cm} \\delta(q, b, b) = \\{(q, ε)\\} \\hspace{0.5 cm} \\delta(q, 0, 0) = \\{(q, ε)\\};$\n",
-    "    - $\\delta(q, 1, 1) = \\{(q, ε)\\}; \\hspace{0.5 cm} \\delta(q, (, () = {(q, ε)}; \\hspace{0.5 cm} \\delta(q, ), )) = {(q, ε)}; $\n",
-    "    - $\\delta(q, +, +) = \\{(q, ε)\\}; \\hspace{0.5 cm} \\delta(q, *, *) = \\{(q, ε)\\};$"
+    "- $\\delta$ es\n",
+    "    - $\\delta(q, \\epsilon, I) = \\{(q, a), (q, b), (q, Ia), (q, Ib), (q, I0), (q, I1)\\}$\n",
+    "    - $\\delta(q, \\epsilon, E) = \\{(q, I), (q, E * E), (q, E + E), (q, (E))\\}$\n",
+    "    - $\\delta(q, a, a) = \\{(q, \\epsilon)\\}; \\hspace{0.5 cm} \\delta(q, b, b) = \\{(q, \\epsilon)\\} \\hspace{0.5 cm} \\delta(q, 0, 0) = \\{(q, \\epsilon)\\};$\n",
+    "    - $\\delta(q, 1, 1) = \\{(q, \\epsilon)\\}; \\hspace{0.5 cm} \\delta(q, (, () = \\{(q, \\epsilon)\\}; \\hspace{0.5 cm} \\delta(q, ), )) = \\{(q, \\epsilon)\\};$\n",
+    "    - $\\delta(q, +, +) = \\{(q, \\epsilon)\\}; \\hspace{0.5 cm} \\delta(q, *, *) = \\{(q, \\epsilon)\\};$"
    ]
   },
   {
@@ -660,5 +660,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
